--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,19 @@
 :root {
-    --cellSize: 50px;
+    --cellSize: 30px;
 }
 
 .cell {
     height: var(--cellSize);
     width: var(--cellSize);
+    float: left;
+    background-color: #ddcb9b;
     padding: 0;
     margin: 0;
-    border: 1;
+    border-bottom: 1px solid black;
+    border-right: 1px solid black;
+}
+
+.grid {
+    height: auto;
+    width: auto;
 }
