--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,8 @@
     background-color: white;
     padding: 0;
     margin: 0;
-    border-bottom: 1px solid transparent;
-    border-right: 1px solid transparent;
+    border-bottom: 1px black solid;
+    border-right: 1px black solid;
 }
 
 .start {
