no crash if path not found

--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,10 @@
     background-color: rgb(159, 248, 159);
 }
 .closed {
-    background-color: rgb(236, 161, 233);
+    background-color: rgb(228, 174, 226);
 }
 .path {
-    background-color: #912fa5;
+    background-color: #d407fd;
 }
 
 .grid {
