--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,10 @@
     background-color: rgb(159, 248, 159);
 }
 .closed {
-    background-color: rgb(228, 174, 226);
+    background-color: rgb(233, 190, 231);
 }
 .path {
-    background-color: #d407fd;
+    background-color: #d400ff;
 }
 
 .grid {
