--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,10 @@
     background-color: rgb(159, 248, 159);
 }
 .closed {
-    background-color: rgb(233, 190, 231);
+    background-color: rgb(235, 202, 233);
 }
 .path {
-    background-color: #d400ff;
+    background-color: #f722ec;
 }
 
 .grid {
